--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@ en:
   site:
     title: 'Grounds Beta'
     contact: 'Contact'
+    status: 'Status'
     sources: 'Sources'
     about: 'About'
     copyright: '© 2014 Adrien Folie'
