--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
     status: 'Status'
     sources: 'Sources'
     about: 'About'
+    profile: 'Profile'
     copyright: '© 2014 Adrien Folie'
   editor:
     error:
