--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,7 +6,7 @@ en:
     sources: 'Sources'
     about: 'About'
     profile: 'Profile'
-    copyright: '© 2014 Adrien Folie'
+    copyright: '© 2014 Grounds'
   editor:
     error:
       connect: 'Connection with remote server failed. Trying to reconnect...'
