Addition of the team and edit of the footer
Conflicts:
	app/assets/stylesheets/base.css.scss
	app/views/pages/about.html.erb

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
     status: 'Status'
     sources: 'Sources'
     about: 'About'
-    copyright: '© 2014 Adrien Folie'
+    copyright: '© 2014 Grounds'
   editor:
     error:
       connect: 'Connection with remote server failed. Trying to reconnect...'
