--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
     status: 'Status'
     sources: 'Sources'
     about: 'About'
-    copyright: '© 2014 Grounds'
+    copyright: '© 2014-2015 Grounds'
   editor:
     error:
       connect: 'Connection with remote server failed. Trying to reconnect...'
